# DigitalGeometryProcessing

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Deformation.vcxproj  Deformation.vcxproj.filters  DigitalGeometryProcessing.sln  Test.vcxproj  Test.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Deformation/: main.cpp
Mapping/: laplace.cpp  laplace.h  main.cpp  single_patch_parameterization.cpp  single_patch_parameterization.h
Mapping/data/: line.vtk
Round/: main.cpp
Test/: main.cpp
data/: round.objbak
include/: binary_io.h  mesh_io.h  tri_mesh.h  vtk.h
include/geodesic/: CMakeLists.txt  geodesic_algorithm_dijkstra.h  geodesic_algorithm_exact.h  geodesic_algorithm_subdivision.h  geodesic_constants_and_simple_functions.h  geodesic_memory.h  geodesic_mesh.h
